--- a/Finite state machine/Finite state machine.vcxproj
+++ b/Finite state machine/Finite state machine.vcxproj
@@ -133,13 +133,16 @@
     <ClCompile Include="BaseGameEntity.h" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MessageDispatcher.cpp" />
     <ClCompile Include="StateMachine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AgentStates.h" />
     <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="MessageDispatcher.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateMachine.h" />
+    <ClInclude Include="Telegram.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
