Everyone is here, in time!

--- a/Finite state machine/Finite state machine.vcxproj
+++ b/Finite state machine/Finite state machine.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="AgentStates.h" />
     <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="GameClock.h" />
     <ClInclude Include="MessageDispatcher.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateMachine.h" />
