--- a/Finite state machine/Finite state machine.vcxproj.filters
+++ b/Finite state machine/Finite state machine.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Telegram.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameClock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
